--- a/rootdir/etc/init.mt8163.rc
+++ b/rootdir/etc/init.mt8163.rc
@@ -282,6 +282,26 @@ on boot
     chmod 0660 /dev/ttyGS3
     chown system radio /dev/ttyGS3
 
+    # Wi-Fi
+    chown wifi wifi /sys/kernel/debug/mtwifi/wlan0/fwpath
+    chmod 0666 /sys/kernel/debug/mtwifi/wlan0/fwpath
+
+on property:wlan.driver.status=ok
+    write /dev/wmtWifi "1"
+
+on property:wlan.driver.status=unloaded
+    write /dev/wmtWifi "0"
+
+service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
+    -g@android:wpa_wlan0
+    interface android.hardware.wifi.supplicant@1.0::ISupplicant default
+    interface android.hardware.wifi.supplicant@1.1::ISupplicant default
+    interface android.hardware.wifi.supplicant@1.2::ISupplicant default
+    socket wpa_wlan0 dgram 660 wifi wifi
+    class main
+    disabled
+    oneshot
+
 service kisd /system/bin/kisd
     user root
     group system
