--- a/rootdir/etc/init.recovery.mt8163.rc
+++ b/rootdir/etc/init.recovery.mt8163.rc
@@ -10,3 +10,7 @@ on init
     setprop sys.usb.ffs.aio_compat 1
     setprop persist.adb.nonblocking_ffs 0
     setprop ro.adb.nonblocking_ffs 0
+
+service amazon_init /system/bin/amazon_init
+    oneshot
+    seclabel u:r:recovery:s0
