mt8163-common: Import and bind mount loader config for media swcodec
* This config needs to be modified for legacy devices. As
  there is no easy way to split it, import it into device
  tree and bind mount it instead.

* Head at android-10.0.0_r2
  (3ac371484399da6efbd0c835aa461d3326263ab1).

Change-Id: I0320be9066d53225a623aa2f5baa5306ebb95b28

--- a/rootdir/etc/init.mt8163.rc
+++ b/rootdir/etc/init.mt8163.rc
@@ -356,3 +356,6 @@ service amzn_dha_hmac /system/bin/amzn_dha_hmac
     group system
     oneshot
     disabled
+
+on property:apexd.status=ready
+    mount none /system/etc/swcodec/ld.config.txt /apex/com.android.media.swcodec/etc/ld.config.txt bind
