--- a/rootdir/etc/init.mt8163.rc
+++ b/rootdir/etc/init.mt8163.rc
@@ -31,6 +31,10 @@ on fs
     symlink /dev/block/platform/soc/11230000.mmc /dev/block/platform/mtk-msdc.0
     mount_all /vendor/etc/fstab.mt8163 --early
 
+    # Configure ZRAM
+    write /proc/sys/vm/page-cluster 0
+    swapon_all /vendor/etc/fstab.mt8163
+
 on late-fs
     # Mount RW partitions which need run fsck
     mount_all /vendor/etc/fstab.mt8163 --late
